--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <button id="putawayModeBtn">Putaway Mode</button>
     <button id="pointsModeBtn">Points Mode</button>
     <button id="liveBPModeBtn">Live BP Mode</button>
+    <button id="intendedZoneModeBtn">Intended Zone Mode</button>
     <button id="undoBtn" style="background-color: red; color: white;">UNDO</button>
   </div>
 
@@ -138,6 +139,125 @@
         </div>
       </div>
     </div>
+
+<div id="intendedZoneMode" style="display:none;">
+  <h2>Intended Zone Mode</h2>
+
+  <!-- This will be your scoreboard for the pitcher’s accuracy -->
+  <div id="intendedZoneStats">
+    <div id="intendedZoneTotalPitches">Total Pitches: 0</div>
+    <div id="intendedZoneAccuracyPoints">Accuracy Points: 0</div>
+    <div id="intendedZoneExactHits">Exact Hits: 0</div>
+    <div id="intendedZoneHitPercentage">Hit %: 0</div>
+  </div>
+
+  <!-- Step 1: Pitch type selection -->
+  <div id="intendedZonePitchTypeSelection">
+    <h3>Select Pitch Type</h3>
+    <button class="btn" id="intended-fourSeam">4S</button>
+    <button class="btn" id="intended-twoSeam">2S</button>
+    <button class="btn" id="intended-cutter">CT</button>
+    <button class="btn" id="intended-curveBall">CB</button>
+    <button class="btn" id="intended-slider">SL</button>
+    <button class="btn" id="intended-changeup">CH</button>
+    <button class="btn" id="intended-splitter">SP</button>
+  </div>
+
+  <!-- Step 2: Intended Zone selection -->
+  <div id="intendedZoneSelection" style="display:none;">
+    <h3>Select Intended Zone</h3>
+    <div id="intendedZoneGridContainer" style="display: flex; justify-content: center;">
+      <div id="intendedZoneGrid">
+        <!-- Just reuse the same 7x7 grid as pitchLocationSelection -->
+        <!-- Row 1 -->
+        <button class="intendedZoneBtn" id="intendedZone-26">26</button>
+        <button class="intendedZoneBtn" id="intendedZone-27">27</button>
+        <button class="intendedZoneBtn" id="intendedZone-28">28</button>
+        <button class="intendedZoneBtn" id="intendedZone-29">29</button>
+        <button class="intendedZoneBtn" id="intendedZone-30">30</button>
+        <button class="intendedZoneBtn" id="intendedZone-31">31</button>
+        <button class="intendedZoneBtn" id="intendedZone-32">32</button>
+        <!-- Row 2 -->
+        <button class="intendedZoneBtn" id="intendedZone-33">33</button>
+        <button class="intendedZoneBtn" id="intendedZone-10">10</button>
+        <button class="intendedZoneBtn" id="intendedZone-11">11</button>
+        <button class="intendedZoneBtn" id="intendedZone-12">12</button>
+        <button class="intendedZoneBtn" id="intendedZone-13">13</button>
+        <button class="intendedZoneBtn" id="intendedZone-14">14</button>
+        <button class="intendedZoneBtn" id="intendedZone-34">34</button>
+        <!-- Row 3 -->
+        <button class="intendedZoneBtn" id="intendedZone-35">35</button>
+        <button class="intendedZoneBtn" id="intendedZone-15">15</button>
+        <button class="intendedZoneBtn" id="intendedZone-1">1</button>
+        <button class="intendedZoneBtn" id="intendedZone-2">2</button>
+        <button class="intendedZoneBtn" id="intendedZone-3">3</button>
+        <button class="intendedZoneBtn" id="intendedZone-16">16</button>
+        <button class="intendedZoneBtn" id="intendedZone-36">36</button>
+        <!-- Row 4 -->
+        <button class="intendedZoneBtn" id="intendedZone-37">37</button>
+        <button class="intendedZoneBtn" id="intendedZone-17">17</button>
+        <button class="intendedZoneBtn" id="intendedZone-4">4</button>
+        <button class="intendedZoneBtn" id="intendedZone-5">5</button>
+        <button class="intendedZoneBtn" id="intendedZone-6">6</button>
+        <button class="intendedZoneBtn" id="intendedZone-18">18</button>
+        <button class="intendedZoneBtn" id="intendedZone-38">38</button>
+        <!-- Row 5 -->
+        <button class="intendedZoneBtn" id="intendedZone-39">39</button>
+        <button class="intendedZoneBtn" id="intendedZone-19">19</button>
+        <button class="intendedZoneBtn" id="intendedZone-7">7</button>
+        <button class="intendedZoneBtn" id="intendedZone-8">8</button>
+        <button class="intendedZoneBtn" id="intendedZone-9">9</button>
+        <button class="intendedZoneBtn" id="intendedZone-20">20</button>
+        <button class="intendedZoneBtn" id="intendedZone-40">40</button>
+        <!-- Row 6 -->
+        <button class="intendedZoneBtn" id="intendedZone-41">41</button>
+        <button class="intendedZoneBtn" id="intendedZone-21">21</button>
+        <button class="intendedZoneBtn" id="intendedZone-22">22</button>
+        <button class="intendedZoneBtn" id="intendedZone-23">23</button>
+        <button class="intendedZoneBtn" id="intendedZone-24">24</button>
+        <button class="intendedZoneBtn" id="intendedZone-25">25</button>
+        <button class="intendedZoneBtn" id="intendedZone-42">42</button>
+        <!-- Row 7 -->
+        <button class="intendedZoneBtn" id="intendedZone-43">43</button>
+        <button class="intendedZoneBtn" id="intendedZone-44">44</button>
+        <button class="intendedZoneBtn" id="intendedZone-45">45</button>
+        <button class="intendedZoneBtn" id="intendedZone-46">46</button>
+        <button class="intendedZoneBtn" id="intendedZone-47">47</button>
+        <button class="intendedZoneBtn" id="intendedZone-48">48</button>
+        <button class="intendedZoneBtn" id="intendedZone-49">49</button>
+      </div>
+    </div>
+  </div>
+
+  <!-- Step 3: Actual Zone selection -->
+  <div id="actualZoneSelection" style="display:none;">
+    <h3>Select Actual Zone</h3>
+    <div id="actualZoneGridContainer" style="display: flex; justify-content: center;">
+      <div id="actualZoneGrid">
+        <!-- You can literally copy the same 7x7 layout, just different IDs so we know it's the “actual” zone. -->
+        <!-- Row 1 -->
+        <button class="actualZoneBtn" id="actualZone-26">26</button>
+        <button class="actualZoneBtn" id="actualZone-27">27</button>
+        <button class="actualZoneBtn" id="actualZone-28">28</button>
+        <button class="actualZoneBtn" id="actualZone-29">29</button>
+        <button class="actualZoneBtn" id="actualZone-30">30</button>
+        <button class="actualZoneBtn" id="actualZone-31">31</button>
+        <button class="actualZoneBtn" id="actualZone-32">32</button>
+        <!-- etc... replicate rows 2-7 -->
+        <!-- (for brevity, not repeating all buttons here – just keep the same pattern with ID="actualZone-##") -->
+      </div>
+    </div>
+  </div>
+
+  <!-- A pitch log if you like, similar to liveBP -->
+  <div id="intendedZonePitchLog">
+    <h3>Intended Zone Pitch Log</h3>
+    <ul id="intendedZoneLog"></ul>
+  </div>
+
+  <button id="exportIntendedZoneBtn" style="margin-top: 20px;">Export Intended Zone Stats</button>
+</div>
+
 
 <div id="taggingOptions" style="display: none;">
   <h3>Select Tag and Add Note</h3>
