--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
     </div>
 
 <div id="intendedZoneMode" style="display:none;">
-  <h2 id="modeTitle">Intended Zone Modes</h2>
+  <h2 id="intendedZoneTitle">Intended Zone Modes</h2>
 
   <!-- This will be your scoreboard for the pitcher’s accuracy -->
   <div id="intendedZoneStats">
