--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
         </div>
       </div>
     </div>
+  </div> 
 
 <div id="intendedZoneMode" style="display:none;">
   <h2 id="intendedZoneTitle">Intended Zone Modes</h2>
