--- a/index.html
+++ b/index.html
@@ -167,65 +167,64 @@
   <!-- Step 2: Intended Zone selection -->
   <div id="intendedZoneSelection" style="display:none;">
     <h3>Select Intended Zone</h3>
-    <div id="intendedZoneGridContainer" style="display: flex; justify-content: center;">
+  <  div id="intendedZoneGridContainer" style="display: flex; justify-content: center;">
       <div id="intendedZoneGrid">
-        <!-- Just reuse the same 7x7 grid as pitchLocationSelection -->
         <!-- Row 1 -->
-        <button class="intendedZoneBtn" id="intendedZone-26">26</button>
-        <button class="intendedZoneBtn" id="intendedZone-27">27</button>
-        <button class="intendedZoneBtn" id="intendedZone-28">28</button>
-        <button class="intendedZoneBtn" id="intendedZone-29">29</button>
-        <button class="intendedZoneBtn" id="intendedZone-30">30</button>
-        <button class="intendedZoneBtn" id="intendedZone-31">31</button>
-        <button class="intendedZoneBtn" id="intendedZone-32">32</button>
+        <button class="intendedZoneBtn nonCompetitiveZone" id="intendedZone-26">26</button>
+        <button class="intendedZoneBtn nonCompetitiveZone" id="intendedZone-27">27</button>
+        <button class="intendedZoneBtn nonCompetitiveZone" id="intendedZone-28">28</button>
+        <button class="intendedZoneBtn nonCompetitiveZone" id="intendedZone-29">29</button>
+        <button class="intendedZoneBtn nonCompetitiveZone" id="intendedZone-30">30</button>
+        <button class="intendedZoneBtn nonCompetitiveZone" id="intendedZone-31">31</button>
+        <button class="intendedZoneBtn nonCompetitiveZone" id="intendedZone-32">32</button>
         <!-- Row 2 -->
-        <button class="intendedZoneBtn" id="intendedZone-33">33</button>
-        <button class="intendedZoneBtn" id="intendedZone-10">10</button>
-        <button class="intendedZoneBtn" id="intendedZone-11">11</button>
-        <button class="intendedZoneBtn" id="intendedZone-12">12</button>
-        <button class="intendedZoneBtn" id="intendedZone-13">13</button>
-        <button class="intendedZoneBtn" id="intendedZone-14">14</button>
-        <button class="intendedZoneBtn" id="intendedZone-34">34</button>
+        <button class="intendedZoneBtn nonCompetitiveZone" id="intendedZone-33">33</button>
+        <button class="intendedZoneBtn shadowZone"        id="intendedZone-10">10</button>
+        <button class="intendedZoneBtn shadowZone"        id="intendedZone-11">11</button>
+        <button class="intendedZoneBtn shadowZone"        id="intendedZone-12">12</button>
+        <button class="intendedZoneBtn shadowZone"        id="intendedZone-13">13</button>
+        <button class="intendedZoneBtn shadowZone"        id="intendedZone-14">14</button>
+        <button class="intendedZoneBtn nonCompetitiveZone" id="intendedZone-34">34</button>
         <!-- Row 3 -->
-        <button class="intendedZoneBtn" id="intendedZone-35">35</button>
-        <button class="intendedZoneBtn" id="intendedZone-15">15</button>
-        <button class="intendedZoneBtn" id="intendedZone-1">1</button>
-        <button class="intendedZoneBtn" id="intendedZone-2">2</button>
-        <button class="intendedZoneBtn" id="intendedZone-3">3</button>
-        <button class="intendedZoneBtn" id="intendedZone-16">16</button>
-        <button class="intendedZoneBtn" id="intendedZone-36">36</button>
+        <button class="intendedZoneBtn nonCompetitiveZone" id="intendedZone-35">35</button>
+        <button class="intendedZoneBtn shadowZone"        id="intendedZone-15">15</button>
+        <button class="intendedZoneBtn strikeZone"        id="intendedZone-1">1</button>
+        <button class="intendedZoneBtn strikeZone"        id="intendedZone-2">2</button>
+        <button class="intendedZoneBtn strikeZone"        id="intendedZone-3">3</button>
+        <button class="intendedZoneBtn shadowZone"        id="intendedZone-16">16</button>
+        <button class="intendedZoneBtn nonCompetitiveZone" id="intendedZone-36">36</button>
         <!-- Row 4 -->
-        <button class="intendedZoneBtn" id="intendedZone-37">37</button>
-        <button class="intendedZoneBtn" id="intendedZone-17">17</button>
-        <button class="intendedZoneBtn" id="intendedZone-4">4</button>
-        <button class="intendedZoneBtn" id="intendedZone-5">5</button>
-        <button class="intendedZoneBtn" id="intendedZone-6">6</button>
-        <button class="intendedZoneBtn" id="intendedZone-18">18</button>
-        <button class="intendedZoneBtn" id="intendedZone-38">38</button>
+        <button class="intendedZoneBtn nonCompetitiveZone" id="intendedZone-37">37</button>
+        <button class="intendedZoneBtn shadowZone"        id="intendedZone-17">17</button>
+        <button class="intendedZoneBtn strikeZone"        id="intendedZone-4">4</button>
+        <button class="intendedZoneBtn strikeZone"        id="intendedZone-5">5</button>
+        <button class="intendedZoneBtn strikeZone"        id="intendedZone-6">6</button>
+        <button class="intendedZoneBtn shadowZone"        id="intendedZone-18">18</button>
+        <button class="intendedZoneBtn nonCompetitiveZone" id="intendedZone-38">38</button>
         <!-- Row 5 -->
-        <button class="intendedZoneBtn" id="intendedZone-39">39</button>
-        <button class="intendedZoneBtn" id="intendedZone-19">19</button>
-        <button class="intendedZoneBtn" id="intendedZone-7">7</button>
-        <button class="intendedZoneBtn" id="intendedZone-8">8</button>
-        <button class="intendedZoneBtn" id="intendedZone-9">9</button>
-        <button class="intendedZoneBtn" id="intendedZone-20">20</button>
-        <button class="intendedZoneBtn" id="intendedZone-40">40</button>
+        <button class="intendedZoneBtn nonCompetitiveZone" id="intendedZone-39">39</button>
+        <button class="intendedZoneBtn shadowZone"        id="intendedZone-19">19</button>
+        <button class="intendedZoneBtn strikeZone"        id="intendedZone-7">7</button>
+        <button class="intendedZoneBtn strikeZone"        id="intendedZone-8">8</button>
+        <button class="intendedZoneBtn strikeZone"        id="intendedZone-9">9</button>
+        <button class="intendedZoneBtn shadowZone"        id="intendedZone-20">20</button>
+        <button class="intendedZoneBtn nonCompetitiveZone" id="intendedZone-40">40</button>
         <!-- Row 6 -->
-        <button class="intendedZoneBtn" id="intendedZone-41">41</button>
-        <button class="intendedZoneBtn" id="intendedZone-21">21</button>
-        <button class="intendedZoneBtn" id="intendedZone-22">22</button>
-        <button class="intendedZoneBtn" id="intendedZone-23">23</button>
-        <button class="intendedZoneBtn" id="intendedZone-24">24</button>
-        <button class="intendedZoneBtn" id="intendedZone-25">25</button>
-        <button class="intendedZoneBtn" id="intendedZone-42">42</button>
+        <button class="intendedZoneBtn nonCompetitiveZone" id="intendedZone-41">41</button>
+        <button class="intendedZoneBtn shadowZone"        id="intendedZone-21">21</button>
+        <button class="intendedZoneBtn shadowZone"        id="intendedZone-22">22</button>
+        <button class="intendedZoneBtn shadowZone"        id="intendedZone-23">23</button>
+        <button class="intendedZoneBtn shadowZone"        id="intendedZone-24">24</button>
+        <button class="intendedZoneBtn shadowZone"        id="intendedZone-25">25</button>
+        <button class="intendedZoneBtn nonCompetitiveZone" id="intendedZone-42">42</button>
         <!-- Row 7 -->
-        <button class="intendedZoneBtn" id="intendedZone-43">43</button>
-        <button class="intendedZoneBtn" id="intendedZone-44">44</button>
-        <button class="intendedZoneBtn" id="intendedZone-45">45</button>
-        <button class="intendedZoneBtn" id="intendedZone-46">46</button>
-        <button class="intendedZoneBtn" id="intendedZone-47">47</button>
-        <button class="intendedZoneBtn" id="intendedZone-48">48</button>
-        <button class="intendedZoneBtn" id="intendedZone-49">49</button>
+        <button class="intendedZoneBtn nonCompetitiveZone" id="intendedZone-43">43</button>
+        <button class="intendedZoneBtn nonCompetitiveZone" id="intendedZone-44">44</button>
+        <button class="intendedZoneBtn nonCompetitiveZone" id="intendedZone-45">45</button>
+        <button class="intendedZoneBtn nonCompetitiveZone" id="intendedZone-46">46</button>
+        <button class="intendedZoneBtn nonCompetitiveZone" id="intendedZone-47">47</button>
+        <button class="intendedZoneBtn nonCompetitiveZone" id="intendedZone-48">48</button>
+        <button class="intendedZoneBtn nonCompetitiveZone" id="intendedZone-49">49</button>
       </div>
     </div>
   </div>
